--- a/hello.html
+++ b/hello.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <style>
+        h1{
+            color: blue;
+        }
+        h2{
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="color:blue;">Welcome to World</h1>
+    <h1>Welcome to World</h1>
     <h2>Second heading!</h2>
 
     Hello World
